--- a/css/style.css
+++ b/css/style.css
@@ -74,16 +74,12 @@ a {
   border-radius: 4px;
 }
 
-.nav-inner-list > * {
+.nav-inner-list li {
+  padding: 7px;
   margin: 2px 0;
 }
 
-.nav-inner-list li {
-  padding: 7px;
-}
-
-.nav-list a:hover + .nav-inner-list,
-.nav-inner-list:hover {
+.nav-list a:hover + .nav-inner-list {
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -98,13 +94,13 @@ a {
   display: flex;
 }
 
-.form-login a:hover + .login-form {
+.form-login:hover .login-form {
   display: flex;
   flex-direction: column;
   position: absolute;
 }
 
-.btn-basket-order:hover + .form-order {
+.order:hover .form-order {
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -1236,10 +1232,15 @@ a {
 }
 
 .feedback-form-wrapper {
+  display: none;
   width: 100%;
   height: 100vh;
   position: fixed;
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+.feedback-form-wrapper.active {
+  display: block;
 }
 
 .feedback-form {
