--- a/css/style.css
+++ b/css/style.css
@@ -35,11 +35,6 @@ body {
   background-repeat: no-repeat;
   box-sizing: border-box;
 }
-/*
-img {
-  max-width: 100%;
-  height: auto;
-} */
 
 a {
   text-decoration: none;
@@ -63,6 +58,8 @@ a {
 .nav-inner-list {
   padding: 0 0 10px 0;
   display: none;
+  flex-direction: column;
+  position: absolute;
   align-items: center;
   align-content: center;
   box-sizing: border-box;
@@ -79,31 +76,29 @@ a {
   margin: 2px 0;
 }
 
-.nav-list a:hover + .nav-inner-list {
+.nav-list li:hover .nav-inner-list {
   display: flex;
-  flex-direction: column;
-  position: absolute;
 }
 
-.btn-search:hover + .search-form {
+.form-search:hover .search-form {
   display: flex;
-  position: absolute;
 }
 
 .form-login {
   display: flex;
+  padding: 15px 0 15px 0;
 }
 
 .form-login:hover .login-form {
   display: flex;
-  flex-direction: column;
-  position: absolute;
+}
+
+.form-order-basket{
+  padding: 15px 0 15px 0;
 }
 
 .order:hover .form-order {
   display: flex;
-  flex-direction: column;
-  position: absolute;
 }
 
 .nav-item-new a {
@@ -250,6 +245,7 @@ a {
   align-items: center;
   width: 92px;
   height: 32px;
+  margin: 0 10px 0 0;
   background-color: var(--gray-background);
   border-radius: 20px;
   box-sizing: border-box;
@@ -322,16 +318,14 @@ a {
 }
 
 .form-order {
-  position: relative;
+  flex-direction: column;
+  position: absolute;
   display: none;
   box-sizing: border-box;
   background-color: var(--light-beige);
   box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
   border-radius: 4px;
-  flex-direction: column;
   margin: 7px -420px;
-  padding: 0;
-  flex-direction: column;
   padding: 20px 14px 21px 15px;
   min-width: 539px;
   height: 242px;
@@ -717,6 +711,10 @@ a {
   background-color: var(--light-blue);
 }
 
+.order {
+  padding: 0 0 15px 0;
+}
+
 .order span {
   font-weight: 500;
   font-size: 14px;
@@ -1086,20 +1084,8 @@ a {
   justify-content: space-between;
 }
 
-.user-menu > * {
-  margin-right: 10px;
-}
-
-.user-menu > *:last-child {
-  margin-right: 0px;
-}
-
-.form-login > * {
-  margin-right: 10px;
-}
-
-.form-login > *:last-child {
-  margin-right: 0px;
+.form-search {
+  padding: 15px 10px 15px 0;
 }
 
 .info-sections {
@@ -1168,8 +1154,9 @@ a {
 }
 
 .search-form {
-  margin: 5px -310px;
+  margin: 30px -320px;
   padding: 20px 15px;
+  position: absolute;
   background-color: var(--light-beige);
   box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
   border-radius: 4px;
@@ -1188,7 +1175,9 @@ a {
 }
 
 .login-form {
-  margin: 38px -190px;
+  flex-direction: column;
+  position: absolute;
+  margin: 40px -190px;
   padding: 20px;
   background-color: var(--light-beige);
   box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
