--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
   --beige: #f0e1b0;
   --light-beige: #f8f7f4;
   --orange: #d07058;
-  --gray-background: rgba(255, 255, 255, 0.2);
   --brown: #301d1d;
   --burgundy: #80182d;
   --pink: #f0819b;
@@ -21,13 +20,22 @@
   --footer-line: #a9beb2;
   --brown: #9d8b84;
   --light-gray: #8996a6;
+  --orange-shadow: rgba(172, 16, 0, 1);
+  --black-shadow:rgba(0, 0, 0, 0.4);
+  --black-feedback:rgba(0, 0, 0, 0.5);
+  --burgundy-shadow :rgba(160, 32, 11, 0.76);
+  --middle-gray-shadow:rgba(49, 50, 53, 0.5);
+  --middle-gray-hover:rgba(255, 255, 255, 0.4);
+  --middle-gray-input:rgba(255, 255, 255, 0.8);
+  --gray-filters:rgba(255, 255, 255, 0.2);
+
 }
 
 body {
   min-width: 1166px;
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", "Tahoma", sans-serif;
   font-size: 16px;
   line-height: 22px;
   color: var(--basic-white);
@@ -43,6 +51,8 @@ a {
 
 .contact iframe {
   border: none;
+  width: 100%;
+  height: 430px;
 }
 
 .visually-hidden {
@@ -68,7 +78,7 @@ a {
   width: 143px;
   height: 171px;
   background-color: var(--basic-white);
-  box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 20px 20px var(--black-shadow);
   border-radius: 4px;
 }
 
@@ -132,7 +142,7 @@ a {
 
 .catalog-item:hover {
   z-index: 1;
-  background-color: rgba(255, 255, 255, 0.4);
+  background-color: var(--middle-gray-hover);
 }
 
 .catalog-item {
@@ -230,12 +240,12 @@ a {
 
 .button:hover {
   background: linear-gradient(to bottom, #f58669, #ec6f5e);
-  box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
+  box-shadow: 0 2px 2px var(--orange-shadow);
 }
 
 .button:active {
   background: linear-gradient(to bottom, #d84732, #e1613e);
-  box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
+  box-shadow: inset 0 2px 2px var(--orange-shadow);
 }
 
 .btn-login,
@@ -256,7 +266,7 @@ a {
   display: flex;
   width: 32px;
   height: 32px;
-  background-color: var(--gray-background);
+  background-color: var(--gray-filters);
   background-repeat: no-repeat;
   background-position: center;
   border-radius: 50%;
@@ -278,7 +288,7 @@ a {
   width: 92px;
   height: 32px;
   margin: 0 10px 0 0;
-  background-color: var(--gray-background);
+  background-color: var(--gray-filters);
   border-radius: 20px;
   box-sizing: border-box;
   padding: 6px 16px 7px 16px;
@@ -308,7 +318,7 @@ a {
   display: flex;
   width: 100px;
   height: 32px;
-  background-color: var(--gray-background);
+  background-color: var(--gray-filters);
   border-radius: 20px;
   box-sizing: border-box;
   padding: 6px 16px 6px 16px;
@@ -353,7 +363,7 @@ a {
   display: none;
   box-sizing: border-box;
   background-color: var(--light-beige);
-  box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 20px 20px var(--black-shadow);
   border-radius: 4px;
   margin: 7px -420px;
   padding: 20px 14px 21px 15px;
@@ -595,7 +605,7 @@ a {
   text-align: center;
   font: inherit;
   background-image: linear-gradient(180deg, #f26843 0%, #e74a35 100%);
-  text-shadow: 0px 2px 5px rgba(160, 32, 11, 0.76);
+  text-shadow: 0px 2px 5px var(--burgundy-shadow);
   border-radius: 70px;
 }
 
@@ -646,7 +656,7 @@ a {
   line-height: 45px;
   margin: 0 0 20px 0;
   color: var(--basic-white);
-  text-shadow: 0px 1px 3px rgba(49, 50, 53, 0.5);
+  text-shadow: 0px 1px 3px var(--middle-gray-shadow);
 }
 
 .catalog-item span {
@@ -1002,7 +1012,7 @@ a {
   box-sizing: border-box;
   width: 190px;
   height: 32px;
-  background: rgba(255, 255, 255, 0.2);
+  background-color: var(--gray-filters);
   border-radius: 20px;
   border-style: none;
   outline: 0;
@@ -1042,7 +1052,7 @@ a {
 .filters-price-slider {
   margin: 0;
   padding: 0;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: var(--gray-filters);
   border-radius: 20px;
   box-sizing: border-box;
   width: 218px;
@@ -1057,7 +1067,7 @@ a {
   justify-content: space-between;
   padding: 7px 17px 7px 14px;
   margin: 0;
-  background: rgba(255, 255, 255, 0.2);
+  background-color: var(--gray-filters);
   border-radius: 20px;
   width: 425px;
   box-sizing: border-box;
@@ -1068,7 +1078,7 @@ a {
   justify-content: space-between;
   padding: 8px 19px;
   margin: 0;
-  background: rgba(255, 255, 255, 0.2);
+  background-color: var(--gray-filters);
   border-radius: 20px;
   width: 711px;
   box-sizing: border-box;
@@ -1090,7 +1100,7 @@ a {
   width: 20px;
   height: 20px;
   border: 2px solid;
-  border-color: rgba(255, 255, 255, 0.8);
+  border-color: var(--middle-gray-input);
   box-sizing: border-box;
 }
 
@@ -1114,7 +1124,7 @@ a {
   width: 22px;
   height: 22px;
   border: 3px solid;
-  border-color: rgba(255, 255, 255, 0.8);
+  border-color: var(--middle-gray-input);
   box-sizing: border-box;
 }
 
@@ -1126,7 +1136,7 @@ a {
   width: 7.92px;
   height: 7.92px;
   border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: var(--middle-gray-input);
   box-sizing: border-box;
 }
 
@@ -1134,7 +1144,7 @@ a {
   box-sizing: border-box;
   border: 2px solid;
   border-color: var(--basic-white);
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: var(--gray-filters);
   border-radius: 20px;
   font-weight: 500;
   font-size: 16px;
@@ -1165,8 +1175,6 @@ a {
   color: var(--basic-white);
   font-weight: 500;
   font-size: 16px;
-  line-height: 18px;
-  color: inherit;
 }
 
 .pagination-item:hover {
@@ -1350,7 +1358,7 @@ a {
   padding: 20px 15px;
   position: absolute;
   background-color: var(--light-beige);
-  box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 20px 20px var(--black-shadow);
   border-radius: 4px;
 }
 
@@ -1373,7 +1381,7 @@ a {
   margin: 40px -190px;
   padding: 20px;
   background-color: var(--light-beige);
-  box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 20px 20px var(--black-shadow);
   border-radius: 4px;
 }
 
@@ -1418,7 +1426,7 @@ a {
   width: 100%;
   height: 100vh;
   position: fixed;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: var(--black-feedback);
 }
 
 .feedback-form-wrapper.active {
@@ -1480,6 +1488,6 @@ a {
   font-size: 18px;
   line-height: 24px;
   color: var(--basic-white);
-  text-shadow: 0px 2px 5px rgba(160, 32, 11, 0.76);
+  text-shadow: var(--burgundy-shadow);
   align-self: flex-end;
 }
