--- a/css/style.css
+++ b/css/style.css
@@ -929,8 +929,8 @@ a {
 .contact-wrapper {
   position: absolute;
   width: 100%;
-  padding: 62px 0;
   top: 0;
+  left: 0;
 }
 
 .contact-inner {
@@ -948,6 +948,7 @@ a {
   height: 306px;
   border-radius: 16px;
   padding: 32px 25px;
+  margin: 62px 0;
 }
 
 .contact-info-title {
