--- a/css/style.css
+++ b/css/style.css
@@ -926,14 +926,6 @@ a {
   height: 430px;
 }
 
-.contact-inner {
-  display: flex;
-  flex-direction: row-reverse;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
 .contact-info {
   display: flex;
   flex-direction: column;
@@ -944,7 +936,10 @@ a {
   height: 306px;
   border-radius: 16px;
   padding: 32px 25px;
-  margin: 62px 0;
+  top: 62px;
+  right: 50%;
+  margin-right: -573px;
+  position: absolute;
 }
 
 .contact-info-title {
