--- a/css/normalize.css
+++ b/css/normalize.css
@@ -8,11 +8,9 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
-html
-{
-    line-height: 1.15; /* 1 */
-
-    -webkit-text-size-adjust: 100%; /* 2 */
+ html {
+  line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
@@ -22,18 +20,16 @@ html
  * Remove the margin in all browsers.
  */
 
-body
-{
-    margin: 0;
+body {
+  margin: 0;
 }
 
 /**
  * Render the `main` element consistently in IE.
  */
 
-main
-{
-    display: block;
+main {
+  display: block;
 }
 
 /**
@@ -41,11 +37,9 @@ main
  * `article` contexts in Chrome, Firefox, and Safari.
  */
 
-h1
-{
-    font-size: 2em;
-
-    margin: .67em 0;
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
 }
 
 /* Grouping content
@@ -56,12 +50,10 @@ h1
  * 2. Show the overflow in Edge and IE.
  */
 
-hr
-{
-    overflow: visible; /* 2 */
-
-    box-sizing: content-box; /* 1 */
-    height: 0; /* 1 */
+hr {
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
 }
 
 /**
@@ -69,10 +61,9 @@ hr
  * 2. Correct the odd `em` font sizing in all browsers.
  */
 
-pre
-{
-    font-family: monospace, monospace; /* 1 */
-    font-size: 1em; /* 2 */
+pre {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /* Text-level semantics
@@ -82,9 +73,8 @@ pre
  * Remove the gray background on active links in IE 10.
  */
 
-a
-{
-    background-color: transparent;
+a {
+  background-color: transparent;
 }
 
 /**
@@ -92,12 +82,10 @@ a
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
 
-abbr[title]
-{
-    text-decoration: underline; /* 2 */
-    text-decoration: underline dotted; /* 2 */
-
-    border-bottom: none; /* 1 */
+abbr[title] {
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
 }
 
 /**
@@ -105,9 +93,8 @@ abbr[title]
  */
 
 b,
-strong
-{
-    font-weight: bolder;
+strong {
+  font-weight: bolder;
 }
 
 /**
@@ -117,19 +104,17 @@ strong
 
 code,
 kbd,
-samp
-{
-    font-family: monospace, monospace; /* 1 */
-    font-size: 1em; /* 2 */
+samp {
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /**
  * Add the correct font size in all browsers.
  */
 
-small
-{
-    font-size: 80%;
+small {
+  font-size: 80%;
 }
 
 /**
@@ -138,24 +123,19 @@ small
  */
 
 sub,
-sup
-{
-    font-size: 75%;
-    line-height: 0;
-
-    position: relative;
-
-    vertical-align: baseline;
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
 }
 
-sub
-{
-    bottom: -.25em;
+sub {
+  bottom: -0.25em;
 }
 
-sup
-{
-    top: -.5em;
+sup {
+  top: -0.5em;
 }
 
 /* Embedded content
@@ -165,9 +145,8 @@ sup
  * Remove the border on images inside links in IE 10.
  */
 
-img
-{
-    border-style: none;
+img {
+  border-style: none;
 }
 
 /* Forms
@@ -182,13 +161,11 @@ button,
 input,
 optgroup,
 select,
-textarea
-{
-    font-family: inherit; /* 1 */
-    font-size: 100%; /* 1 */
-    line-height: 1.15; /* 1 */
-
-    margin: 0; /* 2 */
+textarea {
+  font-family: inherit; /* 1 */
+  font-size: 100%; /* 1 */
+  line-height: 1.15; /* 1 */
+  margin: 0; /* 2 */
 }
 
 /**
@@ -197,10 +174,8 @@ textarea
  */
 
 button,
-input
-{
-    /* 1 */
-    overflow: visible;
+input { /* 1 */
+  overflow: visible;
 }
 
 /**
@@ -209,10 +184,8 @@ input
  */
 
 button,
-select
-{
-    /* 1 */
-    text-transform: none;
+select { /* 1 */
+  text-transform: none;
 }
 
 /**
@@ -220,11 +193,10 @@ select
  */
 
 button,
-[type='button'],
-[type='reset'],
-[type='submit']
-{
-    -webkit-appearance: button;
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
 }
 
 /**
@@ -232,13 +204,11 @@ button,
  */
 
 button::-moz-focus-inner,
-[type='button']::-moz-focus-inner,
-[type='reset']::-moz-focus-inner,
-[type='submit']::-moz-focus-inner
-{
-    padding: 0;
-
-    border-style: none;
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
 }
 
 /**
@@ -246,20 +216,18 @@ button::-moz-focus-inner,
  */
 
 button:-moz-focusring,
-[type='button']:-moz-focusring,
-[type='reset']:-moz-focusring,
-[type='submit']:-moz-focusring
-{
-    outline: 1px dotted ButtonText;
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
 }
 
 /**
  * Correct the padding in Firefox.
  */
 
-fieldset
-{
-    padding: .35em .75em .625em;
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
 }
 
 /**
@@ -269,35 +237,29 @@ fieldset
  *    `fieldset` elements in all browsers.
  */
 
-legend
-{
-    display: table; /* 1 */
-
-    box-sizing: border-box; /* 1 */
-    max-width: 100%; /* 1 */
-    padding: 0; /* 3 */
-
-    white-space: normal; /* 1 */
-
-    color: inherit; /* 2 */
+legend {
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
 }
 
 /**
  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
 
-progress
-{
-    vertical-align: baseline;
+progress {
+  vertical-align: baseline;
 }
 
 /**
  * Remove the default vertical scrollbar in IE 10+.
  */
 
-textarea
-{
-    overflow: auto;
+textarea {
+  overflow: auto;
 }
 
 /**
@@ -305,21 +267,19 @@ textarea
  * 2. Remove the padding in IE 10.
  */
 
-[type='checkbox'],
-[type='radio']
-{
-    box-sizing: border-box; /* 1 */
-    padding: 0; /* 2 */
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box; /* 1 */
+  padding: 0; /* 2 */
 }
 
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
 
-[type='number']::-webkit-inner-spin-button,
-[type='number']::-webkit-outer-spin-button
-{
-    height: auto;
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
 }
 
 /**
@@ -327,20 +287,17 @@ textarea
  * 2. Correct the outline style in Safari.
  */
 
-[type='search']
-{
-    outline-offset: -2px; /* 2 */
-
-    -webkit-appearance: textfield; /* 1 */
+[type="search"] {
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
 }
 
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
 
-[type='search']::-webkit-search-decoration
-{
-    -webkit-appearance: none;
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
 }
 
 /**
@@ -348,11 +305,9 @@ textarea
  * 2. Change font properties to `inherit` in Safari.
  */
 
-::-webkit-file-upload-button
-{
-    font: inherit; /* 2 */
-
-    -webkit-appearance: button; /* 1 */
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
 }
 
 /* Interactive
@@ -362,18 +317,16 @@ textarea
  * Add the correct display in Edge, IE 10+, and Firefox.
  */
 
-details
-{
-    display: block;
+details {
+  display: block;
 }
 
 /*
  * Add the correct display in all browsers.
  */
 
-summary
-{
-    display: list-item;
+summary {
+  display: list-item;
 }
 
 /* Misc
@@ -383,16 +336,14 @@ summary
  * Add the correct display in IE 10+.
  */
 
-template
-{
-    display: none;
+template {
+  display: none;
 }
 
 /**
  * Add the correct display in IE 10.
  */
 
-[hidden]
-{
-    display: none;
+[hidden] {
+  display: none;
 }
